tests/NormalTests/paczka1/small_fuzzy/98031461.err
Error in line 4: bGc A165 26,6
Error in line 13: ttEVNU A757 41,2
